<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/UsernameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Company_Name"
        android:textColor="#237498"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ProfilePicID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UsernameID"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />


    <TextView
        android:id="@+id/NameOfCompanyID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@id/ProfilePicID"
        android:text="@string/Company_Name"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/AboutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NameOfCompanyID"
        android:maxLength="1000"
        android:text="@string/Company_about_motto"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <Button
        android:id="@+id/EditProfileButtonID"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/AboutID"
        android:backgroundTint="#8BC34A"
        android:text="@string/EditProfileButton"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ViewProfiles"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/AboutID"
        android:layout_alignEnd="@+id/EditProfileButtonID"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#8BC34A"
        android:contentDescription="@string/friend_request"
        android:text="@string/view_profiles_by_company"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/profile_stats"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/UsernameID"

        android:layout_toEndOf="@id/ProfilePicID"
        android:paddingTop="20dp"
        android:paddingBottom="32dp">

        <include layout="@layout/top_profile" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/EditProfileButtonID"
        android:layout_marginBottom="48dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_nav" />
    </RelativeLayout>

</RelativeLayout>