<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/UsernameID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ProfilePicID"
        android:background="@drawable/profilepicture"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/UsernameID"
        android:contentDescription="@string/todo"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <RelativeLayout
        android:id="@+id/profile_stats"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_below="@id/UsernameID"

        android:layout_toEndOf="@id/ProfilePicID"
        android:paddingTop="20dp"
        android:paddingBottom="30dp">

        <include layout="@layout/top_profile" />
    </RelativeLayout>

    <TextView
        android:id="@+id/NameOfPersonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:layout_below="@id/ProfilePicID"
        android:text="@string/NameOfPerson"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <!--android:singleLine="true"-->


    <TextView
        android:id="@+id/AboutID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/NameOfPersonID"
        android:layout_marginTop="0dp"
        android:ellipsize="end"
        android:fontFamily="serif"
        android:maxLength="100"
        android:text="@string/About"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black" />

    <Button

        android:id="@+id/PostButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_below="@+id/AboutID"
        android:layout_toEndOf="@id/EditProfileButtonID"
        android:backgroundTint="#54AC1D"
        android:fontFamily="serif"
        android:layout_alignParentEnd="true"
        android:text="@string/post_button"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/EditProfileButtonID"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_below="@id/AboutID"
        android:backgroundTint="#54AC1D"
        android:fontFamily="serif"
        android:layout_alignStart="@+id/post_id"
        android:text="@string/EditProfileButton"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview_layout"
        android:layout_below="@id/EditProfileButtonID"
        android:layout_marginBottom="48dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_nav" />

    </RelativeLayout>





</RelativeLayout>


