<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        android:background="@android:color/white"
        >
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/profile_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/close_share_post_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/to_decline_share_post"
                    android:src="@drawable/cross">

                </ImageView>

                <ImageView
                    android:id="@+id/share_post_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/share_the_post_into_feed"
                    android:src="@drawable/tick">

                </ImageView>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/app_bar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/image_preview"
            android:src="@drawable/add_image_icon"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/preveiw_of_the_image_to_be_posted">

        </ImageView>

        <EditText
            android:id="@+id/post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/say_something_about_the_post"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            android:autofillHints="">

        </EditText>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/bottom_nav" />
    </RelativeLayout>


</RelativeLayout>